# shotsmith

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/commands/: context-health.md  status.md  wrapup.md
.github/workflows/: test.yml
shotsmith/: __init__.py  __main__.py  captions.py  compose.py  config.py  devices.py  fonts.py  frame.py  passthrough.py  pipeline.py  stage.py  verify.py
skill/: SKILL.md
templates/: captions.example.json  config.example.json
templates/presets/: README.md  apple-music.json  mauve.json  royal-purple.json
tests/: test_compose.py  test_frame.py  test_passthrough.py  test_pipeline.py  test_stage.py  test_verify.py
